<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="rieger.alarmsmsapp.view.RuleSelection" >
    
    <item
        android:id="@+id/create_new_rule_from_rule_selection"
        android:orderInCategory="100"
        android:title="@string/create_new_rule"/>

    <item
        android:id="@+id/alarm_settings_from_rule_selection"
        android:orderInCategory="100"
        android:title="@string/alarm_settings"/>
    
    <item
        android:id="@+id/department_settings_from_rule_selection"
        android:orderInCategory="100"
        android:title="@string/department_settings"/>

    <item
        android:id="@+id/test_rules"
        android:orderInCategory="100"
        android:title="@string/test_rule"/>

    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/help"/>


    <item
        android:id="@+id/likeOnFB"
        android:orderInCategory="200"
        android:title="@string/fb_like_button"/>

</menu>
