<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="rieger.alarmsmsapp.view.ruleactivitys.RuleSettings" >

     <item
        android:id="@+id/rule_list_from_rule_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/rule_list"/>
     
     <item
        android:id="@+id/alarm_settings_from_rule_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/alarm_settings"/>
    
    <item
        android:id="@+id/department_settings_from_rule_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/department_settings"/>
    
    
    
   

</menu>
