<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="rieger.alarmsmsapp.view.ruleactivitys.LightSettings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_light_settings_main_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/activity_light_settings_main_text" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/activit_set_light_on_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_light_settings_set_light_on_checkbox"
        android:layout_below="@+id/activity_light_settings_main_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/activity_light_settings_spinner_for_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/time_array"
        android:prompt="@string/activity_answer_creation_spinner_for_answer_distance_prompt"
        android:layout_below="@+id/activity_light_settings_text_spinner"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_string_button_save"
        android:id="@+id/activity_light_settings_button_save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_string_button_quit"
        android:id="@+id/activity_light_settings_button_quit"
        android:layout_alignBottom="@+id/activity_light_settings_button_save"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_light_settings_text_sipnner"
        android:id="@+id/activity_light_settings_text_spinner"
        android:layout_below="@+id/activit_set_light_on_checkbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />
</RelativeLayout>
