<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rieger.alarmsmsapp.view.TestRule"
    android:id="@+id/activity_test_rule"
    android:background="@color/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView7">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/activity_test_rule_maintext_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/activity_test_rule_maintext"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/activity_test_rule_editText_for_sender_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/activity_test_rule_description_textView"
                android:ems="10"
                android:hint="@string/activity_sender_selection_editText_for_sender_information_hint_sms">

            </EditText>

            <Button
                android:id="@+id/activity_test_rule_button_choose_contacts_for_sender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/activity_test_rule_editText_for_sender_information"
                android:text="@string/general_string_button_choose_contact" />

            <TextView
                android:id="@+id/activity_test_rule_description_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/activity_test_rule_maintext_textView"
                android:layout_marginTop="39dp"
                android:text="@string/activity_test_rule_sender_description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/activity_test_rule_description_text_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/activity_test_rule_button_choose_contacts_for_sender"
                android:layout_marginTop="39dp"
                android:text="@string/activity_test_rule_text_description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/activity_test_rule_message_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/activity_test_rule_description_text_textView"
                android:hint="@string/activity_test_rule_hint_message" />

        </RelativeLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:src="@android:drawable/ic_menu_send"
        android:id="@+id/activity_test_rule_button_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_string_button_test"
        android:layout_alignBottom="@+id/scrollView7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
