<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="rieger.alarmsmsapp.view.ruleactivitys.CreateNewRule"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:id="@+id/activity_create_new_rule_editText_rule_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/activity_create_new_rule_textView_label_for_editText_rule_name"
                android:layout_toRightOf="@+id/activity_create_new_rule_textView_label_for_editText_rule_name"
                android:ems="10"
                android:hint="@string/activity_create_new_rule_editText_rule_name_hint" />

            <TextView
                android:id="@+id/activity_create_new_rule_textView_label_for_editText_rule_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:text="@string/activity_create_new_rule_textView_label_for_editText_rule_name" />

            <TextView
                android:id="@+id/activity_create_new_rule_textView_description_of_radio_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/activity_create_new_rule_textView_label_for_editText_rule_name"
                android:layout_below="@+id/activity_create_new_rule_editText_rule_name"
                android:layout_marginTop="17dp"
                android:text="@string/activity_create_new_rule_textView_description_of_radio_buttons"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />
            <!--TODO: Delete line above-->

            <RadioGroup
                android:id="@+id/activity_create_new_rule_radioGroup_content_chooser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/activity_create_new_rule_textView_description_of_radio_buttons"
                android:layout_below="@+id/activity_create_new_rule_textView_description_of_radio_buttons"
                android:visibility="invisible">
                <!--TODO: Delete line above-->

                <RadioButton
                    android:id="@+id/radio_content_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/activity_create_new_rule_radio_content_sms" />

                <RadioButton
                    android:id="@+id/radio_content_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_create_new_rule_radio_content_mail" />
            </RadioGroup>

            <Button
                android:id="@+id/activity_create_new_rule_button_save_rule_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/activity_create_new_rule_button_quit_rule_name"
                android:layout_alignBottom="@+id/activity_create_new_rule_button_quit_rule_name"
                android:layout_alignRight="@+id/activity_create_new_rule_editText_rule_name"
                android:text="@string/general_string_button_save" />

            <Button
                android:id="@+id/activity_create_new_rule_button_quit_rule_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/activity_create_new_rule_radioGroup_content_chooser"
                android:layout_below="@+id/activity_create_new_rule_editText_rule_name"
                android:layout_marginTop="15dp"
                android:text="@string/general_string_button_quit" />
            <!-- TODO: change this line with the line above -->
            <!--android:layout_below="@+id/activity_create_new_rule_radioGroup_content_chooser"-->

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>