<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_answer_creation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="rieger.alarmsmsapp.view.ruleactivitys.AnswerCreation"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/activity_answer_creation_textView_answer_activity_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_answer_creation_description" />

            <!--<EditText-->
                <!--android:id="@+id/activity_answer_creation_editText_for_receiver"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignBaseline="@+id/activity_answer_creation_textView_label_for_editText_receiver"-->
                <!--android:layout_alignBottom="@+id/activity_answer_creation_textView_label_for_editText_receiver"-->
                <!--android:layout_toRightOf="@+id/activity_answer_creation_textView_label_for_editText_receiver"-->
                <!--android:ems="10"-->
                <!--android:hint="@string/activity_answer_creation_editText_for_receiver_hint" />-->

            <Button
                android:id="@+id/activity_answer_creation_button_choose_contacts_for_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/activity_answer_creation_editText_for_receiver"
                android:layout_marginTop="15dp"
                android:text="@string/general_string_button_choose_contact" />

            <TextView
                android:id="@+id/activity_answer_creation_textView_label_for_editText_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/activity_answer_creation_button_choose_contacts_for_answer"
                android:layout_below="@+id/activity_answer_creation_button_choose_contacts_for_answer"
                android:layout_marginTop="15dp"
                android:text="@string/activity_answer_creation_label_for_editText_message" />

            <EditText
                android:id="@+id/activity_answer_creation_editText_for_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/activity_answer_creation_textView_label_for_editText_message"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/activity_answer_creation_textView_label_for_editText_message"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/activity_answer_creation_editText_for_message_hint"
                android:inputType="textMultiLine">

            </EditText>

            <TextView
                android:id="@+id/activity_answer_creation_textView_label_for_spinner_for_answer_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/activity_answer_creation_editText_for_message"
                android:layout_below="@+id/activity_answer_creation_editText_for_message"
                android:layout_marginTop="15dp"
                android:text="@string/activity_answer_creation_label_for_spinner_for_answer_distance" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/activity_answer_creation_spinner_for_answer_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/activity_answer_creation_textView_label_for_spinner_for_answer_distance"
                android:layout_marginTop="15dp"
                android:entries="@array/distance_arrays"
                android:prompt="@string/activity_answer_creation_spinner_for_answer_distance_prompt" />

            <rieger.alarmsmsapp.util.Chips.ChipsView
                android:id="@+id/activity_answer_creation_editText_for_receiver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                app:cv_color_clicked="@color/my_accent"
                app:cv_bg_color_clicked="@color/base30"
                app:cv_text_color_clicked="#000000"
                android:layout_marginLeft="16dp"
                app:cv_hint="@string/activity_answer_creation_editText_for_receiver_hint"
                app:cv_max_height="120dp"
                app:cv_vertical_spacing="2dp"
                android:layout_below="@+id/activity_answer_creation_textView_answer_activity_description"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/activity_answer_creation_textView_label_for_editText_receiver"
                android:layout_toEndOf="@+id/activity_answer_creation_textView_label_for_editText_receiver" />

            <TextView
                android:id="@+id/activity_answer_creation_textView_label_for_editText_receiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/activity_answer_creation_label_for_editText_for_receiver"
                android:layout_below="@+id/activity_answer_creation_textView_answer_activity_description"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


        </RelativeLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_answer_creation_button_save_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_done"
        android:text="@string/general_string_button_save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>